# lm3s6965evb

./: Cargo.toml  build.rs  build.sh  makefile
.cargo/: config.toml
src/: main.rs
