[package]
name = "lm3s6965evb"
version = "0.1.0"
edition = "2021"

[dependencies]
# the following crates handles the micro-architecture of the chip
cortex-m = "0.7.7"  # Low level access to Cortex-M processors
cortex-m-rt = "0.7.3" # Startup code and minimal runtime for Cortex-M microcontrollers
cortex-m-semihosting = "0.5.0" # Semihosting for ARM Cortex-M processors

# TODO: add PAC(Peripheral Access Crate) to use MCU peripherals

panic-halt = "0.2.0"